# tb64-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
cmake/: CPackConfig.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
include/: base64.hpp  box.hpp  magic.hpp  version.h.in
src/: base64.cpp  box.cpp  tb64.cpp
